added method in Controller and some refactoring and all controllers now is Transactional  - added Patch method from AuthorController and Post now returns Dto;  - added createDto method from AuthorDtoFactory, BookDtoFactory, PublisherDtoFactory;  - added @Setter from AuthorEntity, BookEntity, GenreEntity, PublisherEntity, ReviewEntity;  - replace Post method to Put method for update and create from BookController, GenreController, PublisherController;  - fix bug from NameUtils;  - deleted ReviewController